Fixed Overall layout to flex. Changed minor content. Updated some for readability.

--- a/style.css
+++ b/style.css
@@ -1,27 +1,27 @@
-
-
 body {
-    box-shadow: inset 0 0 0  100px #1f2937;
-    margin-right: 100px;
-    margin-left: 100px;
-    min-width: 1000px;
-    max-width: 1250px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  padding:0;
+  margin: 0;
+  text-align:center;
+  background-color:#1f2937;
 }
+
+/* Main Flex Container*/
+
+.maincontainer {
+    display:flex;
+    flex-direction:column;
+}
+/*Header*/
 
 .header {
     background-color: #1f2937;
-    display:inline-flex;
-    justify-content:space-between;
-    width: 100%;
-    flex-shrink: 1;
+    display:flex;
+    align-items:center;
+    justify-content: space-around;
 }
 
 .logo {
-    font-size: 24px;
+    font-size: 38px;
     color: slategrey;
     align-self: center;
     padding-left: 20px;
@@ -33,7 +33,7 @@ body {
     flex-grow: 1;
     max-width: 400px;
     justify-content: space-between;
-    font-size: 18px;
+    font-size: 19px;
     color: white;
     padding-right: 20px;
 } 
@@ -52,7 +52,7 @@ a:hover {
 
 
 
-
+/* First Content Holder under header*/
 .topcontent {
     background-color: #1f2937;
     display:flex;
@@ -67,7 +67,8 @@ a:hover {
 }
 
 .topimage {
-   
+   height:350px;
+   width: 500px;
 }
 
 
@@ -85,12 +86,14 @@ a:hover {
     font-weight:bold;
     text-decoration:none;
     color:white;
+    text-align: left;
 }
 
 .subtext{
     font-size: 18px;
     font-style:#e5e7eb;
     color:white;
+    text-align:left;
 }
 
 .odenbutton {
@@ -101,6 +104,8 @@ a:hover {
     color: white;
     margin-top: 1em;
 }
+
+
 
 .secondcontent {
     text-align:center;
@@ -140,6 +145,8 @@ a:hover {
     border-radius: 20px;
 }
 
+
+
 .thirdcontent {
     padding: 100px;
     display:flex;
@@ -170,6 +177,7 @@ a:hover {
     padding-bottom: 75px;
     padding-left:150px;
     padding-right:150px;
+    background-color:white;
 }
 
 .buttonframe {
@@ -202,4 +210,5 @@ a:hover {
     align-content: center;
     justify-content: center;
     padding-bottom: 30px;
+    padding-top:30px;
 }
